invalid_no_arg_keywords_test/invalid_no_arg_keywords_test_1.src
.IPPcode24
CREATEFRAME GF@a